@@ -1,4 +1,5 @@
 0.3.3
+Changed format of session files, made future proof.
 Code clean.
 Matched version numbers in included plugins with main version.
 Save/Restore session now saves/restores main window size and position.
